--- a/templates/chat.html
+++ b/templates/chat.html
@@ -646,9 +646,13 @@
         });
 
         sendButton.addEventListener('click', sendMessage);
-        messageInput.addEventListener('keypress', function(e) {
+        messageInput.addEventListener('keydown', function(e) {
             if (e.key === 'Enter' && !e.shiftKey) {
                 e.preventDefault();
+                const start = this.selectionStart;
+                const end = this.selectionEnd;
+                this.value = this.value.substring(0, start) + '\n' + this.value.substring(end);
+                this.selectionStart = this.selectionEnd = start + 1;
             }
         });
 
